# mesmer

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: mesmer-master.yml  mesmer-publish.yml  tox.yml
docs/: conf.py  index.rst
docs/mesmer/: index.rst  likelihood.rst  seds.rst  tools.rst
examples/: example.ipynb
licenses/: LICENSE.rst
mesmer/: __init__.py  likelihood.py  seds.py  tools.py
mesmer/tests/: test_likelihood.py  test_sed.py
