[metadata]
name = mesmer
author = Ben Thorne
author_email = bn.thorne@googlemail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/bthorne93/mesmer
description = mesmer sees through foregrounds
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = bthorne93/mesmer

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    matplotlib
    pyyaml
    h5py
    astropy-healpix

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest<6
    pytest-astropy
docs =
    sphinx-astropy


[options.package_data]
mesmer = data/*

[tool:pytest]
testpaths = "mesmer" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    mesmer/_astropy_init*
    mesmer/conftest.py
    mesmer/*setup_package*
    mesmer/tests/*
    mesmer/*/tests/*
    mesmer/extern/*
    mesmer/version*
    */mesmer/_astropy_init*
    */mesmer/conftest.py
    */mesmer/*setup_package*
    */mesmer/tests/*
    */mesmer/*/tests/*
    */mesmer/extern/*
    */mesmer/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
